style.css
:root {
    --primary-color: #1f242d;
    --second-bg-color: #323946;
    --accent-color: #0d6efd;
    --text-color: #fff;
}

.header-button {
    background-color: var(--primary-color);
    border: 2px solid var(--second-bg-color);
    box-shadow: 0 0 25px 1px var(--second-bg-color);
}

.header-button:hover {
    background-color: var(--accent-color);
}

.dropdown-menu {
    background-color: var(--primary-color);
    border: 2px solid var(--second-bg-color);
    box-shadow: 0 0 25px 1px var(--second-bg-color);
}

.dropdown-item:hover {
    background-color: var(--accent-color);
    cursor: pointer;
}

.card {
    background-color: var(--primary-color);
    color: var(--text-color);
}

.card p {
    font-size: 24px;
    text-align: center;
}

#tech-stack-img {
    width: 50%;
    position: absolute;
    z-index: 0;
    bottom: 0;
    transform: scaleX(-1);
}

nav {
    background-color: var(--second-bg-color);
}

#card-color {
    border: 2px solid var(--primary-color);
    border-radius: 8px;
    box-shadow: 0 0 15px 3px var(--primary-color);
}

#footer-button {
    color: var(--text-color);
}

#about-me {
    background-color: var(--second-bg-color);
}

#tech-stack {
    background-color: var(--primary-color);
}

footer {
    background-color: var(--primary-color);
}

body {
    font-family: "Roboto", serif;
    font-weight: 500;
    font-style: normal;
    color: var(--text-color);
    background-color: var(--primary-color);
}

#carouselExampleIndicators img {
    object-fit: cover;
}

#projects {
    background-color: var(--second-bg-color);
}

h5 {
    font-size: 28px;
}

#about-me-text p {
    font-size: 21px;
}

/* RESPONSIVE DESIGN */

/* Extra small devices (phones) */
@media (min-width: 375px) {
    /* startseite content */
    #startseite-text {
        width: 100%;
    }
    #startseite-content {
        text-align: center;
    }
    #startseite-img {
        width: 80%;
    }
    #kontakt-button {
        width: 40%;
    }
}

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {
    /* startseite content */
    #startseite-text {
        h2 {
            font-size: 35px;
        }
        h3 {
            font-size: 30px;
        }
        p {
            font-size: 16px;
        }
    }
    #startseite-content {
        text-align: center;
    }
    #startseite-img {
        width: 70%;
    }
    #kontakt-button {
        width: 50%;
    }
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
    /* startseite content */
    #startseite-text {
        width: 100%;
    }
    #startseite-content {
        text-align: center;
    }
    #startseite-img {
        width: 60%;
    }
    #kontakt-button {
        width: 50%;
    }
}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
    /* startseite content */
    #startseite-text {
        width: 100%;
        padding-right: 40px;
    }
    #startseite-content {
        text-align: center;
    }
    #startseite-img {
        width: 50%;
    }
    #kontakt-button {
        width: 40%;
    }
}

/* X-Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
    /* startseite content */
    #startseite-content {
        text-align: center;
    }
    #startseite-img {
        width: 50%;
    }
    #kontakt-button {
        width: 40%;
    }
}

/* XX-Large devices (larger desktops, 1400px and up) */
@media (min-width: 1400px) {
    /* startseite content */
    #startseite-content {
        text-align: center;
    }
    #startseite-text {
        h2 {
            font-size: 40px;
        }
        h3 {
            font-size: 35px;
        }
        p {
            font-size: 18px;
        }
    }
    #startseite-img {
        width: 40%;
    }
    #kontakt-button {
        width: 40%;
    }

}

